# gnu-practic

./: .gitignore  CMakeLists.txt  README.md  main.c
FileIO/: FileIO_End.c  FileIO_FileExists.c  FileIO_Read.c  FileIO_Write.c
gnu_ui/: pract.cmb  pract.ui
gtkMenu/: gtk_Activate.c  gtk_Events.c  gtk_Open.c
include/: FileIO.h  gtkMenu.h  smartphone.h
smartphone/: sm_InitSmartphones.c  sm_OpenSmartphoneList.c  sm_PrintSmartphone.c  sm_PrintSmartphones.c  sm_SaveSmartphoneList.c  sm_StoreSmartphone.c
